tests/neg/i15750.scala

val foo = A[B] // error // error

val bar = A[Int] // error
